# mcp-redis

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml  smithery.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: PYPI_SETUP.md
examples/: redis_assistant.py
scripts/: validate_release.py
src/: main.py  version.py
src/common/: config.py  connection.py  server.py
src/tools/: hash.py  json.py  list.py  misc.py  pub_sub.py  redis_query_engine.py  redis_tools.py  server_management.py  set.py  sorted_set.py  stream.py  string.py
tests/: __init__.py  conftest.py  test_config.py  test_connection.py  test_main.py  test_server.py
tests/tools/: __init__.py  test_hash.py  test_json.py  test_list.py  test_pub_sub.py  test_redis_query_engine.py  test_server_management.py  test_set.py  test_sorted_set.py  test_stream.py  test_string.py
