[project]
name = "redis-mcp-server"
dynamic = ["version"]
description = "Redis MCP Server - Model Context Protocol server for Redis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Redis", email = "oss@redis.com"}
]
keywords = ["redis", "mcp", "model-context-protocol", "ai", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp[cli]>=1.9.4",
    "redis>=6.0.0",
    "dotenv>=0.9.9",
    "numpy>=2.2.4",
    "click>=8.0.0",
]

[project.scripts]
redis-mcp-server = "src.main:cli"

[project.urls]
Homepage = "https://github.com/redis/mcp-redis"
Repository = "https://github.com/redis/mcp-redis"
Issues = "https://github.com/redis/mcp-redis/issues"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/version.py"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]

# Security configuration for bandit
[tool.bandit]
exclude_dirs = ["tests", "build", "dist"]
skips = ["B101", "B601"]  # Skip assert_used and shell_injection_process_args if needed

[tool.bandit.assert_used]
skips = ["*_test.py", "*/test_*.py"]

# Test configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "coverage>=7.10.1",
    "isort>=6.0.1",
    "mypy>=1.17.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.5",
    "safety>=3.6.0",
]
